# ChangeLog for media-libs/gst-plugins-ugly
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-ugly/ChangeLog,v 1.58 2009/11/10 16:10:15 tester Exp $

  10 Nov 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-ugly-0.10.12.ebuild:
  Stable on amd64, bug #290343

*gst-plugins-ugly-0.10.12 (07 Sep 2009)

  07 Sep 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-ugly-0.10.12.ebuild:
  Version bump

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  arm/ia64/sh/sparc stable wrt #266986

  23 May 2009; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  Stable for HPPA (bug #266986).

  21 May 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  Marking gst-plugins-ugly-0.10.11 ppc64 stable for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  Marking gst-plugins-ugly-0.10.11 ppc stable for bug 266986

  14 May 2009; Markus Meier <maekke@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  amd64 stable, bug #266986

  12 May 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  stable x86, bug 266986

  03 May 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-ugly-0.10.11.ebuild:
  Stable on alpha, bug #266986

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-ugly-0.10.8.ebuild:
  arm/sh stable wrt #232054

*gst-plugins-ugly-0.10.11 (30 Mar 2009)

  30 Mar 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-ugly-0.10.11.ebuild:
  Version bump

*gst-plugins-ugly-0.10.10 (05 Dec 2008)

  05 Dec 2008; <ssuominen@gentoo.org> +gst-plugins-ugly-0.10.10.ebuild:
  Version bump.

  23 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-ugly-0.10.8.ebuild:
  Stable for HPPA (bug #232054).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-ugly-0.10.8.ebuild:
  alpha stable
