@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/gst-plugins-ugly
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-ugly/ChangeLog,v 1.58 2009/11/10 16:10:15 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-ugly/ChangeLog,v 1.59 2009/11/16 05:18:38 leio Exp $
+
+*gst-plugins-ugly-0.10.13 (16 Nov 2009)
+
+  16 Nov 2009; Mart Raudsepp <leio@gentoo.org>
+  +gst-plugins-ugly-0.10.13.ebuild:
+  Version bump. ASF playback improvements; improved mp3 parsing and seeking
 
   10 Nov 2009; Olivier Crête <tester@gentoo.org>
   gst-plugins-ugly-0.10.12.ebuild:
